# Agentic-RCA

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.grafana-mcp.local.yml  docker-compose.jaeger-mcp.local.yml  docker-compose.local.yml  docker-compose.prometheus-mcp.local.yml  pyproject.toml
.github/workflows/: ci.yml
charts/rca-platform/: Chart.yaml  values.yaml
connectors/core/: __init__.py
crds/: catalogsources.rca.dev.yaml  connectorconfigs.rca.dev.yaml  evalpolicies.rca.dev.yaml  investigationpolicies.rca.dev.yaml  modelroutes.rca.dev.yaml
docs/: agentic-rca-learnings.md  api.md  architecture.md  demo-feature-flag-rca-runbook.md  openapi.yaml  rollout-gates.md
docs/design/: figma-findings-srotimi-node-9-9567.md  figma-findings-untitled-node-1-2.md
evals/golden-datasets/: sample.json
examples/minimal/: values.yaml
examples/multi-tenant/: values.yaml
examples/production/: values.yaml
infra/temporal/: docker-compose.yml
platform_core/: __init__.py  agent_runtime.py  connector_runtime.py  evidence_store.py  llm_router.py  mcp_client.py  mcp_execution.py  mcp_planning.py  models.py  planner.py  policy.py  policy_service.py  publisher.py  redaction.py  resolver.py  settings_state.py  store.py  tool_registry.py
rca_plugin_sdk/: __init__.py
scripts/: bootstrap_local_mcp_servers.sh  detect_local_demo_targets.sh  docker_web_ui_dev.sh
sdk/plugin-sdk-python/: README.md  pyproject.toml
sdk/plugin-sdk-python/rca_plugin_sdk/: interfaces.py  manifest.py
services/: __init__.py
tests/: helpers.py
(+163 files in other folders)
