[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rca-agent-platform"
version = "0.1.0"
description = "Cloud-agnostic, Kubernetes-first open-source RCA platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "RCA Agent Platform Contributors" }
]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "httpx>=0.28.0",
  "redis>=6.4.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "temporalio>=1.13.0",
  "litellm>=1.74.0",
  "boto3>=1.40.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
  "mypy>=1.17.0"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["platform_core"]

