[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rca-plugin-sdk"
version = "0.1.0"
description = "Plugin SDK for RCA Agent Platform connectors"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.11.0"]

[project.entry-points."rca.connectors"]
# Example:
# my_connector = "my_package.plugin:connector"
